--- a/stock_tracker/core/templates/core/home.html
+++ b/stock_tracker/core/templates/core/home.html
@@ -4,14 +4,18 @@
     <title>Stock Tracker</title>
     {% load static %}
     <link rel="stylesheet" type="text/css" href="{% static 'core/home.css' %}">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container">
         <h1>Stock Tracker</h1>
 
         <div class="form-section">
-            <h2>Take a look at the price history of your favorite stock</h2>
-            <form method="post" action="{% url 'graph' %}">
+            <h2>Stock graph</h2>
+            <form method="post" action="{% url 'graph' %}" class="graph-form">
+                <p class="graph-subtitle">Take a look at the price history of your favorite stock</p>
                 {% csrf_token %}
                 {{ asset_form.as_p }}
                 <button type="submit">View Graph</button>
@@ -19,8 +23,9 @@
         </div>
 
         <div class="form-section">
-            <h2>Activate email notifications for your favorite stock</h2>
-            <form method="post" action="{% url 'set_notification' %}">
+            <h2>Email notification</h2>
+            <form method="post" action="{% url 'set_notification' %}" class="notification-form">
+                <p class="notification-subtitle">Activate email notifications for your favorite stock</p>
                 {% csrf_token %}
                 {{ notification_form.as_p }}
                 <button type="submit">Set Notification</button>
